--- a/SpringBootSnow/src/main/resources/application.properties
+++ b/SpringBootSnow/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/SpringSnow
-spring.datasource.username=postgres
-spring.datasource.password=Kwerty808
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
